<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="fr">
    <string name="app_name">"Gentil Voisin"</string>
    <string name="facebook_application_id" translatable="false">265526807801547</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb265526807801547</string>

    <string name="common_validate">Valider</string>
    <string name="common_cancel">Annuler</string>

    <string name="login_text_app_name">"{ Gentil Voisin }</string>
    <string name="login_email_edit_text_hint">Email</string>
    <string name="login_password_edit_text_hint">Mot de passe</string>
    <string name="login_button_email">Se connecter par Email</string>
    <string name="login_button_facebook">Se connecter avec Facebook</string>
    <string name="login_button_google">Se connecter avec Google</string>
    <string name="login_error_cancel">Authentification annulée</string>
    <string name="login_error_no_internet">Erreur: vérifiez votre connexion internet</string>
    <string name="login_error_developper">Cette adresse mail est déjà associée à un autre mode de connexion</string>
    <string name="login_error_unknown">Une erreur inconnue est survenue</string>

    <string name="register_infos_subtitle">Enregistrement</string>
    <string name="register_infos_subtitle_change_city">Changer de ville</string>
    <string name="register_infos_name">Votre nom d\'utilisateur: </string>
    <string name="register_infos_zipcode">Votre code postal: </string>
    <string name="register_infos_city">Sélectionnez votre ville: </string>
    <string name="register_infos_button_register">S\'enregistrer</string>
    <string name="register_infos_empty_name">Vous devez saisir un nom.</string>
    <string name="register_infos_empty_zipcode">Vous devez saisir un code postal valide.</string>
    <string name="register_infos_no_city_found">Désolé, aucune ville n\'a été trouvée pour ce code postal.</string>
    <string name="register_infos_success">Enregistrement réussi !</string>
    <string name="register_infos_error">Une erreur s\'est produite, veuillez réessayer.</string>
    <string name="register_infos_change_city_success">Changement de ville effectué</string>

    <string name="menu_last_jobs">Dernières annonces</string>
    <string name="menu_offers">Offres</string>
    <string name="menu_demands">Demandes</string>
    <string name="menu_create_new">Créer une annonce</string>
    <string name="menu_my_jobs">Mes annonces</string>
    <string name="menu_my_messages">Mes messages</string>
    <string name="menu_profile">Mon profil</string>
    <string name="menu_logout">Se déconnecter</string>
    <string name="menu_toolbar_search">Rechercher</string>

    <string name="menu_logout_question">Souhaitez vous vous déconnecter ?</string>
    <string name="menu_logout_yes">Se déconnecter</string>


    <string name="job_type_offer">Offre</string>
    <string name="job_type_demand">Demande</string>
    <string name="error_no_job">Aucune annonce trouvée</string>

    <string name="add_job_category">Catégorie:</string>
    <string name="add_job_description">Description de l\'annonce:</string>
    <string name="add_job_button">Publier</string>
    <string name="add_job_error_no_description">Merci de renseigner une courte description pour votre annonce</string>
    <string name="add_job_added">Annonce publiée !</string>
    <string-array name="job_categories">
        <item>Ménage</item>
        <item>Aide aux devoirs</item>
        <item>Bricolage</item>
        <item>Courses</item>
        <item>Jardinage</item>
        <item>Garde d\'enfants</item>
        <item>Cours</item>
        <item>Autre</item>
    </string-array>
    <string name="categories_alert_title">Choisissez une catégorie</string>
    <string name="categories_all">Toutes les catégories</string>

    <string name="job_card_title">Voir annonce</string>
    <string name="job_card_not_enough_ratings">Pas assez d\'avis sur %1$s</string>
    <string name="job_card_see_ratings">Lire les avis</string>
    <string name="job_card_contact_button">Contacter %1$s</string>
    <string name="job_card_description">Description de l\'annonce:</string>
    <string name="job_card_error_user_posted_the_job">Vous avez posté cette annonce</string>

    <plurals name="ratings_number" tools:ignore="UnusedQuantity">
        <item quantity="zero">Aucun avis n\'a encore été laissé sur %2$s</item>
        <item quantity="one">%1$d avis a été laissé sur %2$s</item>
        <item quantity="other">%1$d avis ont étés laissés sur %2$s</item>
    </plurals>
    <string name="ratings_date">Posté le %1$s</string>
    <string name="ratings_add_rating_button">Laissez votre avis sur %1$s</string>
    <string name="ratings_add_ratings_dialog_positive_button">Ajouter votre avis</string>
    <string name="ratings_add_rating_dialog_title">Laissez votre avis</string>
    <string name="ratings_add_rating_dialog_comment_hint">Ajoutez un commentaire</string>
    <string name="ratings_add_rating_dialog_no_star_clicked">Veuillez cliquer sur une étoile pour noter cet utilisateur</string>
    <string name="ratings_add_rating_dialog_comment_too_short">Veuillez laissez un court commentaire</string>

    <string name="error_no_messages_yet">Vous n\'avez aucun message pour l\'instant</string>

    <string name="profile_change_email">Changer d\'email</string>
    <string name="profile_change_password">Changer de mot de passe</string>
    <string name="profile_my_rating">Ma note:</string>
    <string name="profile_not_enough_ratings">Pas encore assez d\'avis</string>
    <string name="profile_see_ratings_on_me">Voir les avis sur moi</string>
    <string name="profile_change_email_dialog_hint">Entrez votre nouvel email</string>
    <string name="profile_change_email_success">Votre email a bien été modifié</string>
    <string name="profile_change_email_error_email_malformatted">Erreur de format d\'email</string>
    <string name="profile_change_email_error_email_already_exists">Cet email existe déjà</string>
    <string name="profile_change_email_error_login_required">Veuillez vous réauthentifier pour pouvoir changer d\'email</string>
    <string name="profile_change_email_error_other">Une erreur est survenue</string>
    <string name="profile_change_password_dialog_hint">Entrez votre nouveau mot de passe</string>
    <string name="profile_confirm_password_dialog_hint">Confirmez votre nouveau mot de passe</string>
    <string name="profile_change_password_success">Votre mot de passe a bien été modifié</string>
    <string name="profile_change_password_error_same_password">Les deux mots de passe ne correspondent pas</string>
    <string name="profile_change_password_error_weak_password">Votre  mot de passe doit contenir au moins 6 caractères</string>
    <string name="profile_change_password_error_login_required">Veuillez vous réauthentifier pour pouvoir changer de mot de passe</string>
    <string name="profile_change_city">Changer de ville</string>


    <string name="message_label">Messages</string>
    <string name="message_button_mark_job_completed">Marquer le travail comme terminé</string>
    <string name="message_button_mark_job_completed_confirmation">Voulez vous marquer le travail comme terminé ?</string>
    <string name="message_button_add_rating">Travail terminé, laissez un avis sur votre voisin !</string>
    <string name="message_no_message_yet">Cette discussion ne contient pas encore de message</string>
    <string name="message_enter_message">Entrez votre message</string>
</resources>
