<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_group_one"
        android:checkableBehavior="single">
        <item
            android:id="@+id/last_jobs_list"
            android:title="@string/menu_last_jobs"/>
        <item
            android:id="@+id/offers_jobs_list"
            android:title="@string/menu_offers"/>
        <item
            android:id="@+id/demands_jobs_list"
            android:title="@string/menu_demands"/>
    </group>
    <group
        android:id="@+id/menu_group_two"
        android:checkableBehavior="single">
        <item
            android:id="@+id/add_job"
            android:title="@string/menu_create_new"/>
        <item
            android:id="@+id/my_jobs"
            android:title="@string/menu_my_jobs"/>
        <item
            android:id="@+id/my_messages"
            android:title="@string/menu_my_messages"/>
    </group>
    <group android:id="@+id/menu_group_three"
        android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:title="@string/menu_profile"/>
        <item
            android:id="@+id/logout"
            android:title="@string/menu_logout"/>
    </group>

</menu>