<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/last_jobs_list"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/last_jobs_list"
        android:name="com.albanfontaine.gentilvoisin.jobs.LastJobsListFragment"
        android:label="@string/menu_last_jobs"
        tools:layout="@layout/fragment_jobs_list"/>
    <fragment
        android:id="@+id/offers_jobs_list"
        android:name="com.albanfontaine.gentilvoisin.jobs.OffersJobsListFragment"
        android:label="@string/menu_offers"
        tools:layout="@layout/fragment_jobs_list"/>
    <fragment
        android:id="@+id/demands_jobs_list"
        android:name="com.albanfontaine.gentilvoisin.jobs.DemandsJobsListFragment"
        android:label="@string/menu_demands"
        tools:layout="@layout/fragment_jobs_list"/>
    <fragment
        android:id="@+id/add_job"
        android:name="com.albanfontaine.gentilvoisin.jobs.AddJobFragment"
        android:label="@string/menu_create_new"
        tools:layout="@layout/fragment_add_job">
        <action
            android:id="@+id/action_add_job_to_last_jobs_list"
            app:destination="@id/last_jobs_list" />
    </fragment>
    <fragment
        android:id="@+id/job_card"
        android:name="com.albanfontaine.gentilvoisin.jobs.JobCardFragment"
        android:label="@string/job_card_title"
        tools:layout="@layout/fragment_job_card"/>
</navigation>