<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:minWidth="300dp"
    android:minHeight="270dp"
    android:orientation="vertical"
    android:padding="@dimen/padding_dialog">

    <TextView
        style="@style/Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/profile_change_password"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="28sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/changePasswordDialogEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/profile_change_password_dialog_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmPasswordDialogEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/profile_confirm_password_dialog_hint"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="horizontal">

        <Button
            android:id="@+id/changePasswordDialogCancelButton"
            style="@style/Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_shape_round_primary"
            android:text="@string/common_cancel" />

        <Button
            android:id="@+id/changePasswordDialogValidateButton"
            style="@style/Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_weight="1"
            android:background="@drawable/btn_shape_round_primary"
            android:text="@string/common_validate" />
    </LinearLayout>
</LinearLayout>