<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingHorizontal="@dimen/padding_horizontal"
    android:paddingVertical="@dimen/margin_top"
    tools:context=".jobs.AddJobFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:id="@+id/addJobRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/addJobRadioOffer"
                style="@style/AddJobForm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/job_type_offer" />

            <RadioButton
                android:id="@+id/addJobRadioDemand"
                style="@style/AddJobForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/job_type_demand" />
        </RadioGroup>

        <TextView
            android:id="@+id/addJobCategory"
            style="@style/AddJobForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/add_job_category"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addJobRadioGroup" />

        <Spinner
            android:id="@+id/addJobSpinnerCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:inputType="text"
            android:theme="@style/EditText"
            app:layout_constraintBottom_toBottomOf="@+id/addJobCategory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/addJobCategory"
            app:layout_constraintTop_toTopOf="@+id/addJobCategory" />

        <TextView
            android:id="@+id/addJobDescription"
            style="@style/AddJobForm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/add_job_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addJobCategory" />

        <LinearLayout
            android:id="@+id/addJobDescriptionLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/background_white_borders"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addJobDescription">

            <EditText
                android:id="@+id/addJobDescriptionEditText"
                style="@style/EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/fui_transparent"
                android:gravity="top|start"
                android:inputType="textMultiLine|textCapSentences"
                android:lines="8"
                android:maxLength="350"
                android:maxLines="8"
                android:textColor="@color/white"
                tools:ignore="Autofill,LabelFor,UnusedAttribute" />
        </LinearLayout>

        <Button
            android:id="@+id/addJobButton"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/btn_shape_round_white"
            android:paddingHorizontal="@dimen/button_horizontal_padding"
            android:text="@string/add_job_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/addJobDescriptionLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>