<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".auth.LoginActivity">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/img_silouhette_people_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <TextView
        android:id="@+id/login_app_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/sweet_purple"
        android:text="@string/login_text_app_name"
        android:textAlignment="center"
        android:theme="@style/Text.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_app_title">

        <Button
            android:id="@+id/login_button_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/btn_shape_round_white"
            android:drawableStart="@drawable/ic_email"
            android:paddingHorizontal="@dimen/button_horizontal_padding"
            android:text="@string/login_button_email"
            android:theme="@style/Button" />

        <Button
            android:id="@+id/login_button_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/btn_shape_round_facebook_login"
            android:drawableStart="@drawable/ic_facebook"
            android:paddingHorizontal="@dimen/button_horizontal_padding"
            android:text="@string/login_button_facebook"
            android:textStyle="bold"
            android:theme="@style/Text" />

        <Button
            android:id="@+id/login_button_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:background="@drawable/btn_shape_round_google_login"
            android:drawableStart="@drawable/ic_google"
            android:paddingHorizontal="@dimen/button_horizontal_padding"
            android:text="@string/login_button_google"
            android:textStyle="bold"
            android:theme="@style/Text" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>