<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".auth.RegisterInfosActivity">

    <TextView
        android:id="@+id/registerInfosAppTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_text_app_name"
        android:theme="@style/Text.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/registerInfosSubtitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/register_infos_subtitle"
        android:theme="@style/Text.SubTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerInfosAppTitle" />

    <LinearLayout
        android:id="@+id/registerInfosNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerInfosSubtitle"
        tools:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_infos_name"
            android:textStyle="bold"
            android:theme="@style/Text" />

        <EditText
            android:id="@+id/registerInfosName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:theme="@style/EditText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/registerInfosZipcodeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/padding_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerInfosSubtitle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textAlignment="textEnd"
            android:text="@string/register_infos_zipcode"
            android:textStyle="bold"
            android:theme="@style/Text" />

        <EditText
            android:id="@+id/registerInfosZipcode"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="5"
            android:theme="@style/EditText" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/registerInfosCityLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerInfosZipcodeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/register_infos_city"
            android:textStyle="bold"
            android:theme="@style/Text" />

        <Spinner
            android:id="@+id/registerInfosCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:inputType="text"
            android:theme="@style/EditText" />
    </LinearLayout>

    <Button
        android:id="@+id/registerInfosButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="@dimen/margin_top"
        android:background="@drawable/btn_shape_round_white"
        android:text="@string/register_infos_button_validate"
        android:theme="@style/Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerInfosCityLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>