<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/fragmentMessageListJobLayout"
        layout="@layout/item_jobs_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/fragmentMessageListButtonJobCompleted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_shape_round_primary"
        android:text="@string/message_button_mark_job_completed"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentMessageListJobLayout" />

    <TextView
        android:id="@+id/fragmentMessageNoMessageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/message_no_message_yet"
        android:textColor="@color/colorPrimary"
        android:theme="@style/Text"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentMessageListButtonJobCompleted" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragmentMessageListRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/fragmentMessageListInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragmentMessageListButtonJobCompleted"
        tools:itemCount="10"
        tools:listitem="@layout/item_message_recycler_view" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/fragmentMessageListInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/fragmentMessageListInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/fui_transparent"
        android:hint="@string/message_enter_message"
        android:imeOptions="actionSend"
        android:inputType="textCapSentences"
        android:maxLength="350"
        android:maxLines="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill"
        tools:targetApi="lollipop" />
</androidx.constraintlayout.widget.ConstraintLayout>
